added custom blocks

--- a/src/main/resources/assets/iaconicsmod/lang/en_us.json
+++ b/src/main/resources/assets/iaconicsmod/lang/en_us.json
@@ -1,3 +1,4 @@
 {
-  "item.iaconicsmod.newitem": "new item"
+  "item.iaconicsmod.newitem": "new item",
+  "block.iaconicsmod.newblock": "new block"
 }
