--- a/src/main/resources/assets/iaconicsmod/lang/en_us.json
+++ b/src/main/resources/assets/iaconicsmod/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "item.iaconicsmod.newitem": "new item",
-  "block.iaconicsmod.newblock": "new block"
+  "block.iaconicsmod.newblock": "new block",
+  "itemgroup.iaconicsmod.newgroup": "new group"
 }
